WebUI: Fix legacy WebUI checkbox widgets in high contrast mode
These checkboxes use a background image to denote checked status, which
become hidden in high contrast mode. This CL reverts checkboxes back
to the browser's default UI in HCM so that checked states are fully
visible.

Fixed: 1423066
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4521621
Commit-Queue: John Lee <johntlee@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1142451}

--- a/ui/webui/resources/css/widgets.css
+++ b/ui/webui/resources/css/widgets.css
@@ -132,6 +132,16 @@ input[type='checkbox']:checked::before {
   width: 100%;
 }
 
+@media (forced-colors: active) {
+  input[type='checkbox'] {
+    appearance: auto;
+  }
+
+  input[type='checkbox']:checked::before {
+    display: none;
+  }
+}
+
 input[type='radio']:checked::before {
   background-color: #666;
   border-radius: 100%;
